--- a/GoShopping/CanBuyView/ItemCellView.xib
+++ b/GoShopping/CanBuyView/ItemCellView.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,28 +21,36 @@
                     <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.10000000000000001" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HJ6-8M-mCk">
                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oww-Fa-2k2">
-                        <rect key="frame" x="10" y="10" width="80" height="80"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <color key="textColor" name="FontColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oww-Fa-2k2">
+                        <rect key="frame" x="4" y="4" width="92" height="92"/>
+                        <color key="tintColor" name="BrandColor"/>
+                        <attributedString key="attributedText">
+                            <fragment content="Label">
+                                <attributes>
+                                    <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <font key="NSFont" size="13" name="GillSans"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
                         <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </label>
                 </subviews>
             </view>
+            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" name="CardColor"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="HJ6-8M-mCk" secondAttribute="bottom" id="AsK-eI-5k6"/>
-                <constraint firstItem="Oww-Fa-2k2" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="Bef-nC-Jci"/>
+                <constraint firstItem="Oww-Fa-2k2" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="Bef-nC-Jci"/>
                 <constraint firstItem="HJ6-8M-mCk" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="KOJ-Bz-6N8"/>
-                <constraint firstItem="Oww-Fa-2k2" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="a5B-Ni-cpI"/>
+                <constraint firstItem="Oww-Fa-2k2" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="a5B-Ni-cpI"/>
                 <constraint firstItem="HJ6-8M-mCk" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="mVS-fZ-Mvg"/>
-                <constraint firstAttribute="bottom" secondItem="Oww-Fa-2k2" secondAttribute="bottom" constant="10" id="qgU-dR-kYM"/>
+                <constraint firstAttribute="bottom" secondItem="Oww-Fa-2k2" secondAttribute="bottom" constant="4" id="qgU-dR-kYM"/>
                 <constraint firstItem="HJ6-8M-mCk" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="sgr-vh-vMj"/>
-                <constraint firstAttribute="trailing" secondItem="Oww-Fa-2k2" secondAttribute="trailing" constant="10" id="tT8-I4-AIY"/>
+                <constraint firstAttribute="trailing" secondItem="Oww-Fa-2k2" secondAttribute="trailing" constant="4" id="tT8-I4-AIY"/>
                 <constraint firstAttribute="trailing" secondItem="HJ6-8M-mCk" secondAttribute="trailing" id="xIw-lM-FjM"/>
                 <constraint firstItem="HJ6-8M-mCk" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="zAV-tb-pUY"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="202" height="180"/>
             <connections>
                 <outlet property="itemImage" destination="HJ6-8M-mCk" id="0D6-qQ-UOn"/>
@@ -51,11 +60,11 @@
         </collectionViewCell>
     </objects>
     <resources>
+        <namedColor name="BrandColor">
+            <color red="0.24300000071525574" green="0.83899998664855957" blue="0.65100002288818359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="CardColor">
             <color red="0.89399999380111694" green="0.96899998188018799" blue="0.9649999737739563" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="FontColor">
-            <color red="0.22699999809265137" green="0.22699999809265137" blue="0.22699999809265137" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
