--- a/GoShopping/Base.lproj/LaunchScreen.storyboard
+++ b/GoShopping/Base.lproj/LaunchScreen.storyboard
@@ -18,12 +18,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WdX-sA-YIT">
-                                <rect key="frame" x="89" y="422.5" width="236" height="51"/>
+                                <rect key="frame" x="99.5" y="423" width="215" height="50.5"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Go shopping">
                                         <attributes>
-                                            <color key="NSColor" red="0.99991267920000004" green="1" blue="0.99988144639999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <font key="NSFont" size="40" name="Didot-Bold"/>
+                                            <color key="NSColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <font key="NSFont" size="42" name="GillSans-SemiBoldItalic"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
@@ -31,7 +31,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-buying" translatesAutoresizingMaskIntoConstraints="NO" id="9S2-vE-6XY">
-                                <rect key="frame" x="157" y="292.5" width="100" height="100"/>
+                                <rect key="frame" x="157" y="293" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="Qzj-de-LAl"/>
                                     <constraint firstAttribute="width" constant="100" id="fl1-dX-FZC"/>
@@ -40,6 +40,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="HeroScreen"/>
+                        <color key="tintColor" name="BrandColor"/>
                         <constraints>
                             <constraint firstItem="WdX-sA-YIT" firstAttribute="top" secondItem="9S2-vE-6XY" secondAttribute="bottom" constant="30" id="J6R-fL-U93"/>
                             <constraint firstItem="WdX-sA-YIT" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="KlD-hj-tVR"/>
@@ -55,8 +56,11 @@
     </scenes>
     <resources>
         <image name="icons8-buying" width="100" height="100"/>
+        <namedColor name="BrandColor">
+            <color red="0.24300000071525574" green="0.83899998664855957" blue="0.65100002288818359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="HeroScreen">
-            <color red="0.24313725490196078" green="0.83921568627450982" blue="0.65098039215686276" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.24300000071525574" green="0.83899998664855957" blue="0.65100002288818359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
